added logo to header. added footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,16 @@ textarea {
 }
 
 header {
+  background-color: transparent;
+}
+
+.title {
   text-align: center;
   background-color: transparent;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
-  padding: 60px;
+  padding: 60px
 }
 
 .description {
@@ -69,4 +73,12 @@ header {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+footer {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  padding: 10px;
 }
