--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
 
 textarea {
   background: transparent;
-  border: 1px dashed black;
+  border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
