--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,9 +76,15 @@ textarea {
 
 .saveBtn {
   border-left: 1px solid black;
+  background-color: #ffc000;
+  color: black;
+}
+
+.deleteBtn {
+  border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #ffc000;
+  background-color: rgb(216, 69, 69);
   color: black;
 }
 
