--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,17 +60,17 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #8abfe1;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #f7dc8b;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: #88dd88;
   color: white;
 }
 
@@ -98,5 +98,9 @@ footer {
   background-color: rgb(190, 190, 190);
   color: black;
   border-radius: 0;
-  padding: 10px;
+  padding: 20px;
+}
+
+.footerText {
+  line-height: 200%;
 }
